...
                                        <rect key="frame" x="0.0" y="35" width="414" height="44"/>
                                        <autoresizingMask key="autoresizingMask"/>
                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="zpI-HJ-1E7" id="X45-h8-HEe">
                                            <rect key="frame" x="0.0" y="0.0" width="414" height="43.5"/>
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Name of the List" textAlignment="natural" adjustsFontSizeToFit="NO" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="rVR-BC-8tc">
                                                    <rect key="frame" x="10" y="7" width="394" height="30"/>
                                                    <nil key="textColor"/>
                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                    <textInputTraits key="textInputTraits" autocapitalizationType="sentences" returnKeyType="done" enablesReturnKeyAutomatically="YES"/>
                                                    <connections>
                                                        <action selector="done" destination="e0A-hF-7SK" eventType="editingDidEndOnExit" id="539-u2-WgM"/>
...
                            <outlet property="delegate" destination="dKH-Fd-OVU" id="hji-mA-kW5"/>
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Checklists" largeTitleDisplayMode="always" id="9ID-5B-Se7">
                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="mD2-5i-MlN">
                            <userDefinedRuntimeAttributes>
                                <userDefinedRuntimeAttribute type="string" keyPath="accessibilityLabel" value="AddButton"/>
                            </userDefinedRuntimeAttributes>
                            <connections>
                                <segue destination="e0A-hF-7SK" kind="show" identifier="AddChecklist" id="F5V-PY-9se"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
...
